--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -11,7 +11,9 @@
         </thead>
         <tbody>
         <tr th:each="question : ${questionList}">
-            <td th:text="${question.subject}"></td>
+            <td>
+                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+            </td>
             <td th:text="${question.createDate}"></td>
         </tr>
         </tbody>
