--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <table>
-        <thead>
-        <tr>
-            <th>제목</th>
-            <th>작성일시</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="question : ${questionList}">
-            <td>
-                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
-            </td>
-            <td th:text="${question.createDate}"></td>
-        </tr>
-        </tbody>
-    </table>
-</head>
-<body>
-</body>
-</html>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+<table class="table">
+    <thead class="table-dark">
+    <tr>
+        <th>번호</th>
+        <th>제목</th>
+        <th>작성일시</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="question, loop : ${questionList}">
+        <td th:text="${loop.count}"></td>
+        <td>
+            <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+        </td>
+        <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+    </tr>
+    </tbody>
+</table>
+    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+</div>
+
