--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -2,16 +2,14 @@
 <div layout:fragment="content" class="container">
   <h5 class="my-3 border-bottom pb-2">질문등록</h5>
   <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
-    <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
-      <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-    </div>
+    <div th:replace="form_errors :: formErrorsFragment"></div>
     <div class="mb-3">
       <label for="subject" class="form-label">제목</label>
-      <input type="text" name="subject" id="subject" class="form-control">
+      <input type="text" th:field="*{subject}" class="form-control">
     </div>
     <div class="mb-3">
       <label for="content" class="form-label">내용</label>
-      <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+      <textarea th:field="*{content}" class="form-control" rows="10"></textarea>
     </div>
     <input type="submit" value="저장하기" class="btn btn-primary my-2">
   </form>
