--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -30,7 +30,12 @@
     <!-- 답변 작성 -->
     <form th:action="@{|/answer/create/${question.id}|}" th:object="${answerForm}" method="post" class="my-3">
         <div th:replace = "form_errors :: formErrorsFragment"></div>
-        <textarea th:field="*{content}" rows="10" class="form-control"></textarea>
+        <textarea sec:authorize="isAnonymous()" disabled th:field="*{content}" class="form-control" rows="10"></textarea>
+        <textarea sec:authorize="isAuthenticated()" th:field="*{content}" class="form-control" rows="10"></textarea>
+        <!--
+        sec:authorize="isAnonymous()" - 현재 로그아웃 상태
+        sec:authorize="isAuthenticated()" - 현재 로그인 상태
+        -->
         <input type="submit" value="답변등록" class="btn btn-primary my-2">
     </form>
 </div>
