--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -1,7 +1,9 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container">
   <h5 class="my-3 border-bottom pb-2">질문등록</h5>
-  <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
+<!--  <form th:action="@{/question/create}" th:object="${questionForm}" method="post">-->
+    <form th:object="${questionForm}" method="post">
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <div th:replace="form_errors :: formErrorsFragment"></div>
     <div class="mb-3">
       <label for="subject" class="form-label">제목</label>
