--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/info}">프로필</a>
+        </li>
       </ul>
     </div>
   </div>
