comment - answer comment

--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -23,7 +23,7 @@
                     추천
                     <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>
                 </a>
-                <a href="javascript:void(0);" class="comment btn btn-sm btn-outline-secondary">
+                <a href="javascript:void(0);" class="comment-question btn btn-sm btn-outline-secondary">
                     댓글
                     <span class="badge rounded-pill bg-secondary" th:text="${#lists.size(question.commentList)}"></span>
                 </a>
@@ -47,24 +47,23 @@
                             </div>
                             <div th:text="${#temporals.format(comments.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                         </div>
+
                     </div>
                 </li>
             </ul>
             <!-- 댓글 창 끝-->
             <!-- 댓글 등록 창-->
-            <div class="comment_block" style="display: none">
-                <div class="form-floating comment_box" sec:authorize="isAuthenticated()">
-                    <form th:action="@{|/comment/create/question/${question.id}|}" th:object="${commentForm}"
-                          method="post"
-                          class="my-3">
-                        <div th:replace="form_errors :: formErrorsFragment"></div>
-                        <textarea th:field="*{content}" class="form-control"
-                                  placeholder="Leave a comment here"></textarea>
-                        <input type="submit" value="댓글 등록" class="btn btn-primary my-2">
-                    </form>
-                </div>
+            <div class="comment-question-block" style="display: none">
                 <div class="my-2 alert alert-warning" sec:authorize="isAnonymous()" id="comment_warning">
                     <small>댓글 작성은 로그인이 필요합니다.</small>
+                </div>
+                <div class="form-floating comment_box" sec:authorize="isAuthenticated()">
+                    <form th:action="@{|/comment/create/question/${question.id}|}" th:object="${commentForm}" method="post"
+                          class="my-3">
+                        <div th:replace="form_errors :: formErrorsFragment"></div>
+                        <textarea th:field="*{content}" class="form-control" placeholder="Leave a comment here"></textarea>
+                        <input type="submit" value="댓글 등록" class="btn btn-primary my-2">
+                    </form>
                 </div>
             </div>
             <!-- 댓글 등록 창 끝-->
@@ -103,6 +102,11 @@
                     추천
                     <span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>
                 </a>
+                <a href="javascript:void(0);" class="comment-answer btn btn-sm btn-outline-secondary"
+                   th:data-num="${answer.id}">
+                    댓글
+                    <span class="badge rounded-pill bg-secondary" th:text="${#lists.size(question.commentList)}"></span>
+                </a>
                 <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
                    sec:authorize="isAuthenticated()"
                    th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
@@ -112,6 +116,39 @@
                    th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
                    th:text="삭제"></a>
             </div>
+
+            <!-- 댓글 창-->
+            <ul class="list-group">
+                <li th:each="comments: ${answer.getCommentList()}" class="comment-item list-group-item">
+                    <div class="d-flex mb-3">
+                        <div class="me-auto p-2" th:text="${comments.content}"></div>
+                        <div class="badge bg-light text-dark p-2 text-start">
+                            <div class="mb-2">
+                                <span th:if="${comments.author != null}" th:text="${comments.author.username}"></span>
+                            </div>
+                            <div th:text="${#temporals.format(comments.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                        </div>
+
+                    </div>
+                </li>
+            </ul>
+            <!-- 댓글 창 끝-->
+            <!-- 댓글 등록 창-->
+            <div class="comment-answer-block" style="display: none" th:id="${answer.id}" >
+                <div class="my-2 alert alert-warning" sec:authorize="isAnonymous()">
+                    <small>댓글 작성은 로그인이 필요합니다.</small>
+                </div>
+                <div class="form-floating comment_box" sec:authorize="isAuthenticated()">
+                    <form th:action="@{|/comment/create/answer/${answer.id}|}" th:object="${commentForm}" method="post"
+                          class="my-3">
+                        <div th:replace="form_errors :: formErrorsFragment"></div>
+                        <textarea th:field="*{content}" class="form-control" placeholder="Leave a comment here"></textarea>
+                        <input type="submit" value="댓글 등록" class="btn btn-primary my-2">
+                    </form>
+                </div>
+            </div>
+            <!-- 댓글 등록 창 끝-->
+
         </div>
     </div>
     <!-- 답변 반복 끝  -->
@@ -180,7 +217,6 @@
             if (confirm("정말로 삭제하시겠습니까?")) {
                 location.href = this.dataset.uri;
             }
-            ;
         });
     });
 
@@ -190,12 +226,11 @@
             if (confirm("정말로 추천하시겠습니까?")) {
                 location.href = this.dataset.uri;
             }
-            ;
         });
     });
 
-    const comment_elements = document.getElementsByClassName("comment");
-    const block = document.getElementsByClassName("comment_block");
+    const comment_elements = document.getElementsByClassName("comment-question");
+    const block = document.getElementsByClassName("comment-question-block");
     Array.from(comment_elements).forEach(function (element) {
         element.addEventListener('click', function () {
             Array.from(block).forEach((x) => {
@@ -203,6 +238,21 @@
                     x.style.display = "block";
                 } else
                     x.style.display = "none";
+            })
+        });
+    });
+
+    const comment_answer_elements = document.getElementsByClassName("comment-answer");
+    const block_answer = document.getElementsByClassName("comment-answer-block");
+    Array.from(comment_answer_elements).forEach(function (element) {
+        element.addEventListener('click', function () {
+            Array.from(block_answer).forEach((x) => {
+                if(x.id === this.dataset.num){
+                    if (x.style.display === "none" ) {
+                        x.style.display = "block";
+                    } else
+                        x.style.display = "none";
+                }
             })
         });
     });
