--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -11,9 +11,12 @@
     </div>
     <div class="mb-3">
       <label for="content" class="form-label">내용</label>
-      <textarea th:field="*{content}" class="form-control" rows="10"></textarea>
+      <textarea th:field="*{content}" class="form-control" id="markdown" rows="10"></textarea>
     </div>
     <input type="submit" value="저장하기" class="btn btn-primary my-2">
   </form>
 </div>
+<script layout:fragment="script" type='text/javascript'>
+  const simpleMarkDownEditor = new SimpleMDE({ element: document.getElementById("markdown") });
+</script>
 </html>
