--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -1,6 +1,6 @@
 <nav th:fragment="sidebarFragment" class="border-top border-secondary">
   <div class="list-group">
-    <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active" th:href="@{/question/list}">질문과답변</a>
+    <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active" th:href="@{/question/list/qna}">질문과답변</a>
     <a class="rounded-0 list-group-item list-group-item-action list-group-item-light " th:href="@{/question/list/free}">자유게시판</a>
     <!--
     <a class="rounded-0 list-group-item list-group-item-action list-group-item-light " href="/pybo/question/list/tip/">팁과강좌</a>
